@@ -1,2 +1,6 @@
-((gp_max_steps_unchanged 50000)
- (gp_population_size 32))
+(begin
+	(define config (make-hash-table))
+	(hashq-set! config 'population-size 32)
+	(hashq-set! config 'max-step-unchanged 200)
+)
+
